[package]
authors = ["Cnachen CLI <cnachencli@live.cn>"]
description = "A LISP implementation written in Rust"
keywords = ["lisp"]
license = "MIT"
repository = "https://github.com/cnachen/lisp"
name = "lisp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
rustyline = "15.0.0"
